tests/parser/bad/type_t-lparen-tid-with.scilla
scilla_version 0

library TestLib
let f : ('A extra) = False
